<resources>
    <string name="app_name">TipSplitApp</string>
    <string name="bill_total_with_tax">Bill Total with Tax:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total with Tip:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="total_per_person">Total per Person:</string>
    <string name="go">GO</string>
    <string name="clear">CLEAR</string>
    <string name="tip_12">12%</string>
    <string name="tip_15">15%</string>
    <string name="tip_18">18%</string>
    <string name="tip_20">20%</string>
    <string name="bill_total_with_tax_ls">Bill Total with Tax:</string>
    <string name="tip_percent_ls">Tip Percent:</string>
    <string name="tip_amount_ls">Tip Amount:</string>
    <string name="total_with_tip_ls">Total with Tip:</string>
    <string name="number_of_people_ls">Number of People:</string>
    <string name="total_per_person_ls">Total per Person:</string>
    <string name="go_ls">GO</string>
    <string name="clear_ls">CLEAR</string>
    <string name="tip_12_ls">12%</string>
    <string name="tip_15_ls">15%</string>
    <string name="tip_18_ls">18%</string>
    <string name="tip_20_ls">20%</string>
</resources>